--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "nodemon": "^2.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dom-confetti": "^0.2.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
